k8s/base/network-policies/1-default-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: scrapzee
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
